--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 druid = { version = "0.7.0", features = ["im"] }
+serde = { version = "1.0.144", features = ["derive"] }
+serde_json = "1.0.85"
